--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index.js",
+    "start-dev": "concurrently \"nodemon --ignore src/ ./index.js\" \"webpack -w --mode development\"",
+    "build": "webpack -p",
+    "test": "jest --coverage && eslint '**/*.js'",
+    "test:update": "jest -u",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -46,5 +51,53 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.21.0"
+    "autoprefixer": "^9.7.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.5.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "glob-all": "^3.2.1",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^25.5.4",
+    "mini-css-extract-plugin": "^0.9.0",
+    "nock": "^12.0.3",
+    "node-sass": "^4.14.0",
+    "nodemon": "^2.0.3",
+    "postcss-loader": "^3.0.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "raf": "^3.4.1",
+    "sass-loader": "^8.0.2",
+    "smee-client": "^1.1.0",
+    "style-loader": "^1.2.1",
+    "supertest": "^4.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
+    "jest": {
+    "globalSetup": "./tests/global-setup.js",
+    "setupFiles": [
+      "./tests/setup.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testURL": "https://smee.io/CHANNEL"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
   }
 }
